# Windows-Clippy-MCP

./: .gitattributes  .gitignore  .npmignore  @AutomationLog.txt  AddToolProcess.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION-SUMMARY.md  LICENSE  NPM-INSTALL.md  README.md  Windows-Clippy-MCP.sln  copilot-cli-add-command.txt  main.py  manifest.json  package.json  pyproject.toml  python.py  vitest.config.mjs
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  copilot-setup-steps.yml  daily-repo-status.lock.yml  (+1 more)
build-logs/: dump_widget_desc.py  inspect_fixed_widget.py  inspect_widget.py  probe_controls.py  uia.txt  watch_meta.py  widget-wrapper.ps1
docs/: _config.yml  index.md  installation.md  tools.md  widget_wiki.html
scripts/: build-views.mjs  clippy-session.js  clippy-widget-refresh.js  clippy-widget-restart.js  clippy_widget_service.js  install-robust.mjs  install-service.js  integration-test.js  launch-admin-copilot.ps1  service-runner.js  setup.js  smoke-apps-server.mjs  smoke-host-conformance.mjs  smoke-toolbar-dogfood.mjs  start-cursor.js  start-native-livetile.js  start-service.bat  start-widget.js  terminal-bridge-protocol.js  terminal-session-host.js  test-terminal-broker.js  uninstall-service.js  validate-darbit-semanifest.ps1  validate.js  widget-log-watchdog.ps1  widget-service-protocol.js
widget/: Launch-ClippyCursor.cmd  Launch-ClippyLiveTile.cmd  Launch-ClippyWidget.cmd  Launch-DarbitCardDeckGame.cmd  Launch-DarbitE2E.cmd  clippy-cursor.ps1  clippy-widget.ps1  darbit-card-deck-game.ps1  darbit-e2e.ps1  launch-diag.ps1
(+140 files in other folders)
