[project]
name = "windows-clippy-mcp"
version = "0.1.69"
description = "Windows Clippy MCP - Your friendly AI assistant for Windows desktop automation and Microsoft 365 integration."
authors = [
    { name = "Windows Clippy MCP Contributors", email = "support@windows-clippy-mcp.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/dayour/Windows-Clippy-MCP" }
keywords = ["windows", "mcp", "ai", "desktop", "ai agent", "clippy", "microsoft", "m365", "copilot"]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.8.1",
    "fuzzywuzzy>=0.18.0",
    "humancursor>=1.1.5",
    "live-inspect>=0.1.1",
    "markdownify>=1.1.0",
    "pillow>=11.2.1",
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "uiautomation>=2.0.24"
]